--- a/alpha_ins_auv/package.xml
+++ b/alpha_ins_auv/package.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>alpha_std_auv</name>
+  <name>alpha_ins_auv</name>
   <version>0.0.0</version>
-  <description>The alpha_std_auv package</description>
+  <description>The alpha_ins_auv package</description>
 
   <maintainer email="mzhou@uri.edu">Mingxi ZHou</maintainer>
   <author email="mzhou@uri.edu">Mingxi Zhou</author>
   <author email="emircem@uri.edu">Emir Cem Gezer</author>
+  <author email="farhang.naderi@uri.edu">Farhang Naderi</author>
 
   <license>GPLv3</license>
 
