--- a/alpha_ins_bringup/package.xml
+++ b/alpha_ins_bringup/package.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>alpha_std_bringup</name>
+  <name>alpha_ins_bringup</name>
   <version>0.0.0</version>
-  <description>The alpha_std_bringup package</description>
+  <description>The alpha_ins_bringup package</description>
 
   <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>
   <author email="emircem@uri.edu">Emir Cem Gezer</author>
   <author email="mzhou@uri.edu">Mingxi Zhou</author>
+  <author email="farhang.naderi@uri.edu">Farhang Naderi</author>
 
   <license>GPLv3</license>
 
