--- a/alpha_ins_stonefish/CMakeLists.txt
+++ b/alpha_ins_stonefish/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(alpha_std_stonefish)
+project(alpha_ins_stonefish)
 
 
 find_package(catkin REQUIRED COMPONENTS
