--- a/alpha_ins_stonefish/package.xml
+++ b/alpha_ins_stonefish/package.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>alpha_std_stonefish</name>
+  <name>alpha_ins_stonefish</name>
   <version>0.0.0</version>
-  <description>The alpha_std_stonefish package</description>
+  <description>The alpha_ins_stonefish package</description>
 
   <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>
   <author email="emircem@uri.edu">Emir Cem Gezer</author>
   <author email="mzhou@uri.edu">Mingxi Zhou</author>
   <author email="linzhao@uri.edu">Lin Zhao</author>
+  <author email="farhang.naderi@uri.edu">Farhang Naderi</author>
 
   <license>GPLv3</license>
 
